Let's see if this is fixed finally

--- a/supporting-blog-content/geospatial-llm/09-geospatial-search.ipynb
+++ b/supporting-blog-content/geospatial-llm/09-geospatial-search.ipynb
@@ -1462,7 +1462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We are using the Azure OpenAI Ressource.\n",
+    "# We are using the Azure OpenAI Resource.\n",
     "OPENAI_API_KEY = getpass(\"OpenAI API key: \")\n",
     "\n",
     "# Set API key\n",
