Reformated with black formatter, maybe that does the trick?

--- a/supporting-blog-content/geospatial-llm/09-geospatial-search.ipynb
+++ b/supporting-blog-content/geospatial-llm/09-geospatial-search.ipynb
@@ -1100,7 +1100,7 @@
     "        ])\n",
     "\n",
     "for hit in response[\"hits\"][\"hits\"]:\n",
-    "    print(f\"Distance between AirBnB and {hit[\"_source\"][\"name\"]}: {hit[\"sort\"][0]} km\")\n"
+    "    print(f\"Distance between AirBnB and {hit[\"_source\"][\"name\"]}: {hit[\"sort\"][0]} km\")"
    ]
   },
   {
