Rerun the broken cell with the `distance between airbnb` to see if it is parsed now.

--- a/supporting-blog-content/geospatial-llm/09-geospatial-search.ipynb
+++ b/supporting-blog-content/geospatial-llm/09-geospatial-search.ipynb
@@ -75,8 +75,7 @@
     "    # For local development\n",
     "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
-    "    api_key=ELASTIC_API_KEY,\n",
-    "    timeout=600\n",
+    "    api_key=ELASTIC_API_KEY\n",
     ")"
    ]
   },
@@ -1051,18 +1050,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Distance between AirBnB and central park bow bridge: 1.4799179352060348 km\n",
-      "Distance between AirBnB and empire state building: 3.0577584374128617 km\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = client.search(\n",
     "        index=\"points-of-interest\",\n",
