--- a/supporting-blog-content/geospatial-llm/09-geospatial-search.ipynb
+++ b/supporting-blog-content/geospatial-llm/09-geospatial-search.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,16 +53,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/5s/_n6g_h4n4ygck9cvp6g6ng600000gn/T/ipykernel_33510/1531401685.py:8: DeprecationWarning: The 'timeout' parameter is deprecated in favor of 'request_timeout'\n",
-      "  client = Elasticsearch(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
@@ -118,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'instance-0000000001', 'cluster_name': 'c2826e6e8ae74e46b5911a3c89af31cf', 'cluster_uuid': 'jpiDThQURAKY93YeiDkfdA', 'version': {'number': '8.13.2', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '16cc90cd2d08a3147ce02b07e50894bc060a4cbf', 'build_date': '2024-04-05T14:45:26.420424304Z', 'build_snapshot': False, 'lucene_version': '9.10.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+      "{'name': 'instance-0000000001', 'cluster_name': 'c2826e6e8ae74e46b5911a3c89af31cf', 'cluster_uuid': 'jpiDThQURAKY93YeiDkfdA', 'version': {'number': '8.13.4', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': 'da95df118650b55a500dcc181889ac35c6d8da7c', 'build_date': '2024-05-06T22:04:45.107454559Z', 'build_snapshot': False, 'lucene_version': '9.10.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
      ]
     }
    ],
@@ -1050,9 +1041,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distance between AirBnB and central park bow bridge: 1.4799179352060348 km\n",
+      "Distance between AirBnB and empire state building: 3.0577584374128617 km\n"
+     ]
+    }
+   ],
    "source": [
     "response = client.search(\n",
     "        index=\"points-of-interest\",\n",
