Adding notebook for function calling with Elasticsearch

--- a/notebooks/integrations/openai/function-calling.ipynb
+++ b/notebooks/integrations/openai/function-calling.ipynb
@@ -143,16 +143,15 @@
     "    url = f\"\"\"{ES_ENDPOINT}/{ES_INDEX}/_mappings\"\"\"\n",
     "    \n",
     "    headers = {\n",
-    "        'Content-type': 'application/json',\n",
-    "        'Authorization': f\"\"\"ApiKey {ES_API_KEY}\"\"\"\n",
+    "        \"Content-type\": \"application/json\",\n",
+    "        \"Authorization\": f\"\"\"ApiKey {ES_API_KEY}\"\"\"\n",
     "    }\n",
     "    \n",
-    "    resp = requests.request(\"GET\", url, headers=headers)    \n",
+    "    resp = requests.request(\"GET\", url, headers=headers)\n",
     "    resp = json.loads(resp.text)\n",
     "    mapping = json.dumps(resp, indent=4)\n",
     "\n",
-    "    return mapping\n",
-    "    "
+    "    return mapping"
    ]
   },
   {
@@ -175,8 +174,8 @@
     "    url = f\"\"\"{ES_ENDPOINT}/{ES_INDEX}/_search?size=1\"\"\"\n",
     "    \n",
     "    headers = {\n",
-    "        'Content-type': 'application/json',\n",
-    "        'Authorization': f\"\"\"ApiKey {ES_API_KEY}\"\"\"\n",
+    "        \"Content-type\": \"application/json\",\n",
+    "        \"Authorization\": f\"\"\"ApiKey {ES_API_KEY}\"\"\"\n",
     "    }\n",
     "    \n",
     "    resp = requests.request(\"GET\", url, headers=headers)\n",
@@ -231,9 +230,9 @@
     "            }\n",
     "        ],\n",
     "        temperature=0,\n",
-    "    )    \n",
+    "    )\n",
     "\n",
-    "    return resp.choices[0].message.content\n"
+    "    return resp.choices[0].message.content"
    ]
   },
   {
@@ -246,15 +245,15 @@
     "def fetch_from_elasticsearch(nl_query):\n",
     "\n",
     "    query_dsl = build_query(nl_query)\n",
-    "    #print(f\"\"\"Query DSL: ==== \\n\\n {query_dsl}\"\"\")\n",
+    "    # print(f\"\"\"Query DSL: ==== \\n\\n {query_dsl}\"\"\")\n",
     "    \n",
     "    url = f\"\"\"{ES_ENDPOINT}/{ES_INDEX}/_search\"\"\"\n",
     "    \n",
     "    payload = query_dsl\n",
     "    \n",
     "    headers = {\n",
-    "        'Content-type': 'application/json',\n",
-    "        'Authorization': f\"\"\"ApiKey {ES_API_KEY}\"\"\"\n",
+    "        \"Content-type\": \"application/json\",\n",
+    "        \"Authorization\": f\"\"\"ApiKey {ES_API_KEY}\"\"\"\n",
     "    }\n",
     "    \n",
     "    resp = requests.request(\"GET\", url, headers=headers, data=payload)\n",
@@ -263,9 +262,8 @@
     "\n",
     "    json_resp = json.dumps(resp, indent=4)\n",
     "\n",
-    "    #print(f\"\"\"\\n\\nElasticsearch response: ==== \\n\\n {json_resp}\"\"\")\n",
-    "\n",
-    "    return json_resp\n"
+    "    # print(f\"\"\"\\n\\nElasticsearch response: ==== \\n\\n {json_resp}\"\"\")\n",
+    "    return json_resp"
    ]
   },
   {
@@ -288,7 +286,7 @@
     "    url = f\"\"\"{WU_API_ENDPOINT}?latitude={latitude}&longitude={longitude}\"\"\"\n",
     "    \n",
     "    headers = {\n",
-    "      'x-zomato-api-key': f\"\"\"{WU_API_KEY}\"\"\"\n",
+    "      \"x-zomato-api-key\": f\"\"\"{WU_API_KEY}\"\"\"\n",
     "    }\n",
     "    \n",
     "    resp = requests.request(\"GET\", url, headers=headers)\n",
@@ -297,7 +295,7 @@
     "\n",
     "    json_resp = json.dumps(resp, indent=4)\n",
     "\n",
-    "    #print(f\"\"\"\\n\\nWeatherUnion response: ==== \\n\\n {json_resp}\"\"\")\n",
+    "    # print(f\"\"\"\\n\\nWeatherUnion response: ==== \\n\\n {json_resp}\"\"\")\n",
     "    return json_resp"
    ]
   },
@@ -353,15 +351,24 @@
     "                            \"description\": \"The longitude of a location with 0.01 degree\",\n",
     "                        }\n",
     "                    },\n",
-    "                    \"required\": [\"latitude\",\"longitude\"],\n",
+    "                    \"required\": [\"latitude\", \"longitude\"],\n",
     "                },\n",
     "            },\n",
-    "        }\n",
+    "        },\n",
     "    ]\n",
     "\n",
     "    messages = []\n",
-    "    messages.append({\"role\": \"system\", \"content\": \"If no data received from any function. Just say there is issue fetching details from function(function_name)\"})\n",
-    "    messages.append({\"role\": \"user\", \"content\": query})\n",
+    "    messages.append(\n",
+    "        {\n",
+    "            \"role\": \"system\", \"content\": \"If no data received from any function. Just say there is issue fetching details from function(function_name)\"\n",
+    "        }\n",
+    "    )\n",
+    "    \n",
+    "    messages.append(\n",
+    "        {\n",
+    "            \"role\": \"user\", \"content\": query\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "    response = client.chat.completions.create(\n",
     "        model=GPT_MODEL,\n",
@@ -373,13 +380,13 @@
     "    response_message = response.choices[0].message\n",
     "    tool_calls = response_message.tool_calls\n",
     "\n",
-    "    #print(tool_calls)\n",
+    "    # print(tool_calls)\n",
     "     \n",
     "    if tool_calls:\n",
     "\n",
     "        available_functions = {\n",
     "            \"fetch_from_elasticsearch\": fetch_from_elasticsearch,\n",
-    "            \"weather_report\": weather_report\n",
+    "            \"weather_report\": weather_report,\n",
     "        }\n",
     "        messages.append(response_message)\n",
     "        \n",
@@ -400,11 +407,11 @@
     "            if(function_name == \"weather_report\"):\n",
     "            \n",
     "                function_response = function_to_call(\n",
-    "                    latitude=function_args.get(\"latitude\"), \n",
-    "                    longitude=function_args.get(\"longitude\")\n",
+    "                    latitude=function_args.get(\"latitude\"),\n",
+    "                    longitude=function_args.get(\"longitude\"),\n",
     "                )\n",
     "\n",
-    "            #print(function_response)\n",
+    "            # print(function_response)\n",
     "            messages.append(\n",
     "                {\n",
     "                    \"tool_call_id\": tool_call.id,\n",
@@ -413,7 +420,7 @@
     "                    \"content\": function_response,\n",
     "                }\n",
     "            )\n",
-    "\n",
+    "            \n",
     "            second_response = client.chat.completions.create(\n",
     "                model=GPT_MODEL,\n",
     "                messages=messages,\n",
