Adding notebook for function calling with Elasticsearch

--- a/notebooks/integrations/openai/function-calling.ipynb
+++ b/notebooks/integrations/openai/function-calling.ipynb
@@ -144,7 +144,7 @@
     "    \n",
     "    headers = {\n",
     "        \"Content-type\": \"application/json\",\n",
-    "        \"Authorization\": f\"\"\"ApiKey {ES_API_KEY}\"\"\"\n",
+    "        \"Authorization\": f\"\"\"ApiKey {ES_API_KEY}\"\"\",\n",
     "    }\n",
     "    \n",
     "    resp = requests.request(\"GET\", url, headers=headers)\n",
@@ -175,7 +175,7 @@
     "    \n",
     "    headers = {\n",
     "        \"Content-type\": \"application/json\",\n",
-    "        \"Authorization\": f\"\"\"ApiKey {ES_API_KEY}\"\"\"\n",
+    "        \"Authorization\": f\"\"\"ApiKey {ES_API_KEY}\"\"\",\n",
     "    }\n",
     "    \n",
     "    resp = requests.request(\"GET\", url, headers=headers)\n",
@@ -253,13 +253,11 @@
     "    \n",
     "    headers = {\n",
     "        \"Content-type\": \"application/json\",\n",
-    "        \"Authorization\": f\"\"\"ApiKey {ES_API_KEY}\"\"\"\n",
+    "        \"Authorization\": f\"\"\"ApiKey {ES_API_KEY}\"\"\",\n",
     "    }\n",
     "    \n",
     "    resp = requests.request(\"GET\", url, headers=headers, data=payload)\n",
-    "    \n",
     "    resp = json.loads(resp.text)\n",
-    "\n",
     "    json_resp = json.dumps(resp, indent=4)\n",
     "\n",
     "    # print(f\"\"\"\\n\\nElasticsearch response: ==== \\n\\n {json_resp}\"\"\")\n",
@@ -285,14 +283,10 @@
     "\n",
     "    url = f\"\"\"{WU_API_ENDPOINT}?latitude={latitude}&longitude={longitude}\"\"\"\n",
     "    \n",
-    "    headers = {\n",
-    "      \"x-zomato-api-key\": f\"\"\"{WU_API_KEY}\"\"\"\n",
-    "    }\n",
+    "    headers = {\"x-zomato-api-key\": f\"\"\"{WU_API_KEY}\"\"\"}\n",
     "    \n",
     "    resp = requests.request(\"GET\", url, headers=headers)\n",
-    "    \n",
     "    resp = json.loads(resp.text)\n",
-    "\n",
     "    json_resp = json.dumps(resp, indent=4)\n",
     "\n",
     "    # print(f\"\"\"\\n\\nWeatherUnion response: ==== \\n\\n {json_resp}\"\"\")\n",
@@ -360,16 +354,18 @@
     "    messages = []\n",
     "    messages.append(\n",
     "        {\n",
-    "            \"role\": \"system\", \"content\": \"If no data received from any function. Just say there is issue fetching details from function(function_name)\"\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": \"If no data received from any function. Just say there is issue fetching details from function(function_name)\",\n",
     "        }\n",
     "    )\n",
     "    \n",
     "    messages.append(\n",
     "        {\n",
-    "            \"role\": \"user\", \"content\": query\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": query,\n",
     "        }\n",
     "    )\n",
-    "\n",
+    "    \n",
     "    response = client.chat.completions.create(\n",
     "        model=GPT_MODEL,\n",
     "        messages=messages,\n",
@@ -381,7 +377,7 @@
     "    tool_calls = response_message.tool_calls\n",
     "\n",
     "    # print(tool_calls)\n",
-    "     \n",
+    "    \n",
     "    if tool_calls:\n",
     "\n",
     "        available_functions = {\n",
@@ -399,13 +395,11 @@
     "\n",
     "\n",
     "            if(function_name == \"fetch_from_elasticsearch\"):\n",
-    "            \n",
     "                function_response = function_to_call(\n",
     "                    nl_query=function_args.get(\"query\"),\n",
     "                )\n",
     "\n",
     "            if(function_name == \"weather_report\"):\n",
-    "            \n",
     "                function_response = function_to_call(\n",
     "                    latitude=function_args.get(\"latitude\"),\n",
     "                    longitude=function_args.get(\"longitude\"),\n",
