Adding notebook for function calling with Elasticsearch

--- a/notebooks/integrations/openai/function-calling.ipynb
+++ b/notebooks/integrations/openai/function-calling.ipynb
@@ -343,7 +343,7 @@
     "                        \"longitude\": {\n",
     "                            \"type\": \"string\",\n",
     "                            \"description\": \"The longitude of a location with 0.01 degree\",\n",
-    "                        }\n",
+    "                        },\n",
     "                    },\n",
     "                    \"required\": [\"latitude\", \"longitude\"],\n",
     "                },\n",
@@ -377,7 +377,7 @@
     "    tool_calls = response_message.tool_calls\n",
     "\n",
     "    # print(tool_calls)\n",
-    "    \n",
+    "\n",
     "    if tool_calls:\n",
     "\n",
     "        available_functions = {\n",
@@ -390,16 +390,14 @@
     "\n",
     "            function_name = tool_call.function.name\n",
     "            function_to_call = available_functions[function_name]\n",
-    "\n",
     "            function_args = json.loads(tool_call.function.arguments)\n",
     "\n",
-    "\n",
-    "            if(function_name == \"fetch_from_elasticsearch\"):\n",
+    "            if function_name == \"fetch_from_elasticsearch\":\n",
     "                function_response = function_to_call(\n",
     "                    nl_query=function_args.get(\"query\"),\n",
     "                )\n",
     "\n",
-    "            if(function_name == \"weather_report\"):\n",
+    "            if function_name == \"weather_report\":\n",
     "                function_response = function_to_call(\n",
     "                    latitude=function_args.get(\"latitude\"),\n",
     "                    longitude=function_args.get(\"longitude\"),\n",
