Adding notebook for function calling with Elasticsearch

--- a/notebooks/integrations/openai/function-calling.ipynb
+++ b/notebooks/integrations/openai/function-calling.ipynb
@@ -99,8 +99,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = OpenAI()\n",
-    "\n",
     "OPENAI_API_KEY = getpass(\"OpenAI API Key:\")\n",
     "client = OpenAI(\n",
     "    api_key=OPENAI_API_KEY,\n",
@@ -233,6 +231,14 @@
     "    )\n",
     "\n",
     "    return resp.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9678a30d-f2d9-457b-8a49-b41b409c8a73",
+   "metadata": {},
+   "source": [
+    "### Execute Query on Elasticsearch"
    ]
   },
   {
@@ -431,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 12,
    "id": "bbf1a2dc-49f8-4bfd-8317-7f28c5ef4715",
    "metadata": {},
    "outputs": [
@@ -446,20 +452,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The last 10 flights to Bangalore faced delays due to various reasons such as weather conditions, late aircraft, carrier delays, NAS delays, and security delays. Here are the details of the delays:\n",
+      "The last 10 flights to Bangalore which experienced delays are:\n",
       "\n",
-      "1. **Flight B2JWDRX** from Catania faced a security delay of 60 minutes.\n",
-      "2. **Flight C9C7VBY** from Frankfurt am Main was delayed for 285 minutes due to security issues.\n",
-      "3. **Flight 09P9K2Z** from Paris had a late aircraft delay, causing a 195-minute wait.\n",
-      "4. **Flight 0FXK4HG** from Osaka faced a carrier delay of 195 minutes.\n",
-      "5. **Flight 5EYOHJR** from Genova experienced a NAS delay, resulting in a 360-minute delay.\n",
-      "6. **Flight X5HA5YJ** from Bangor was delayed due to weather conditions, with a delay time of 330 minutes.\n",
-      "7. **Flight 4BZUCXP** from Bogota faced a late aircraft delay of 30 minutes.\n",
-      "8. **Flight O8I6UU8** from Catania had a late aircraft delay of 135 minutes and it was also cancelled.\n",
-      "9. **Flight 56HYVZQ** from Denver faced a NAS delay causing a 60-minute setback.\n",
-      "10. **Flight X4025SP** from Paris had a late aircraft delay of 30 minutes and was also amongst the cancelled flights.\n",
+      "1. **Flight Number**: B2JWDRX - **Delay Type**: Security Delay - **Delay Minutes**: 60\n",
+      "2. **Flight Number**: C9C7VBY - **Delay Type**: Security Delay - **Delay Minutes**: 285\n",
+      "3. **Flight Number**: 09P9K2Z - **Delay Type**: Late Aircraft Delay - **Delay Minutes**: 195\n",
+      "4. **Flight Number**: 0FXK4HG - **Delay Type**: Carrier Delay - **Delay Minutes**: 195\n",
+      "5. **Flight Number**: 5EYOHJR - **Delay Type**: NAS Delay - **Delay Minutes**: 360\n",
+      "6. **Flight Number**: X5HA5YJ - **Delay Type**: Weather Delay - **Delay Minutes**: 330\n",
+      "7. **Flight Number**: 4BZUCXP - **Delay Type**: Late Aircraft Delay - **Delay Minutes**: 30\n",
+      "8. **Flight Number**: O8I6UU8 - **Delay Type**: Late Aircraft Delay - **Delay Minutes**: 135\n",
+      "9. **Flight Number**: 56HYVZQ - **Delay Type**: NAS Delay - **Delay Minutes**: 60\n",
+      "10. **Flight Number**: X4025SP - **Delay Type**: Late Aircraft Delay - **Delay Minutes**: 30\n",
       "\n",
-      "Please note that these details are based on the most recent data, and the actual circumstances may vary.\n"
+      "These flights had various reasons for delays like security issues, weather conditions, and late arriving aircraft.\n"
      ]
     }
    ],
