Adding notebook for function calling with Elasticsearch

--- a/notebooks/integrations/openai/function-calling.ipynb
+++ b/notebooks/integrations/openai/function-calling.ipynb
@@ -59,7 +59,7 @@
     "### Install depndencies\n",
     "\n",
     "```sh\n",
-    "pip install openai elasticsearch\n",
+    "pip install openai\n",
     "```"
    ]
   },
