Adding notebook for function calling with Elasticsearch

--- a/notebooks/integrations/openai/function-calling.ipynb
+++ b/notebooks/integrations/openai/function-calling.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "bbf1a2dc-49f8-4bfd-8317-7f28c5ef4715",
    "metadata": {},
    "outputs": [
@@ -445,27 +445,29 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Ask: last 10 flight delay to bangalore\n"
+      "Ask: last 10 flight delay to bangalore, show in table\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The last 10 flights to Bangalore which experienced delays are:\n",
+      "Here are the details of the last 10 flight delays to Bangalore:\n",
       "\n",
-      "1. **Flight Number**: B2JWDRX - **Delay Type**: Security Delay - **Delay Minutes**: 60\n",
-      "2. **Flight Number**: C9C7VBY - **Delay Type**: Security Delay - **Delay Minutes**: 285\n",
-      "3. **Flight Number**: 09P9K2Z - **Delay Type**: Late Aircraft Delay - **Delay Minutes**: 195\n",
-      "4. **Flight Number**: 0FXK4HG - **Delay Type**: Carrier Delay - **Delay Minutes**: 195\n",
-      "5. **Flight Number**: 5EYOHJR - **Delay Type**: NAS Delay - **Delay Minutes**: 360\n",
-      "6. **Flight Number**: X5HA5YJ - **Delay Type**: Weather Delay - **Delay Minutes**: 330\n",
-      "7. **Flight Number**: 4BZUCXP - **Delay Type**: Late Aircraft Delay - **Delay Minutes**: 30\n",
-      "8. **Flight Number**: O8I6UU8 - **Delay Type**: Late Aircraft Delay - **Delay Minutes**: 135\n",
-      "9. **Flight Number**: 56HYVZQ - **Delay Type**: NAS Delay - **Delay Minutes**: 60\n",
-      "10. **Flight Number**: X4025SP - **Delay Type**: Late Aircraft Delay - **Delay Minutes**: 30\n",
+      "| FlightNum | OriginCityName       | Carrier          | FlightDelayType            | FlightTimeHour | FlightDelayMin | timestamp          |\n",
+      "|-----------|----------------------|------------------|----------------------------|----------------|----------------|--------------------|\n",
+      "| B2JWDRX   | Catania              | Kibana Airlines  | Security Delay             | 8.00           | 60             | 2024-03-03T13:32:15|\n",
+      "| C9C7VBY   | Frankfurt am Main    | Logstash Airways | Security Delay             | 15.97          | 285            | 2024-03-01T05:20:01|\n",
+      "| 09P9K2Z   | Paris                | Kibana Airlines  | Late Aircraft Delay        | 11.95          | 195            | 2024-02-29T06:02:38|\n",
+      "| 0FXK4HG   | Osaka                | Logstash Airways | Carrier Delay              | 10.16          | 195            | 2024-02-23T03:34:21|\n",
+      "| 5EYOHJR   | Genova               | ES-Air           | NAS Delay                  | 17.08          | 360            | 2024-02-21T15:51:26|\n",
+      "| X5HA5YJ   | Bangor               | Kibana Airlines  | Weather Delay              | 16.68          | 330            | 2024-02-19T13:50:58|\n",
+      "| 4BZUCXP   | Bogota               | ES-Air           | Late Aircraft Delay        | 14.11          | 30             | 2024-02-16T05:59:37|\n",
+      "| O8I6UU8   | Catania              | ES-Air           | Late Aircraft Delay        | 8.83           | 135            | 2024-02-09T03:12:49|\n",
+      "| 56HYVZQ   | Denver               | Logstash Airways | NAS Delay                  | 17.81          | 60             | 2024-02-08T15:52:44|\n",
+      "| X4025SP   | Paris                | Kibana Airlines  | Late Aircraft Delay        | 7.75           | 30             | 2024-02-08T10:57:29|\n",
       "\n",
-      "These flights had various reasons for delays like security issues, weather conditions, and late arriving aircraft.\n"
+      "Please note that all times are in UTC.\n"
      ]
     }
    ],
