--- a/notebooks/integrations/openai/function-calling.ipynb
+++ b/notebooks/integrations/openai/function-calling.ipynb
@@ -46,7 +46,7 @@
     "### Open AI\n",
     "\n",
     "`OPENAI_API_KEY`: Setup an [Open AI account and create a secret key](https://platform.openai.com/docs/quickstart).  \n",
-    "`GPT_MODEL`: We’re going to use the `gpt-4-1106-vision-preview` model but you can check [here](https://platform.openai.com/docs/guides/function-calling) which model is being supported for function calling.\n",
+    "`GPT_MODEL`: We’re going to use the `gpt-4o` model but you can check [here](https://platform.openai.com/docs/guides/function-calling) which model is being supported for function calling.\n",
     "\n",
     "### Weather Union\n",
     "\n",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "bbf1a2dc-49f8-4bfd-8317-7f28c5ef4715",
    "metadata": {},
    "outputs": [
@@ -452,22 +452,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here are the details of the last 10 flight delays to Bangalore:\n",
+      "Here are the last 10 flight delays to Bangalore:\n",
       "\n",
-      "| FlightNum | OriginCityName       | Carrier          | FlightDelayType            | FlightTimeHour | FlightDelayMin | timestamp          |\n",
-      "|-----------|----------------------|------------------|----------------------------|----------------|----------------|--------------------|\n",
-      "| B2JWDRX   | Catania              | Kibana Airlines  | Security Delay             | 8.00           | 60             | 2024-03-03T13:32:15|\n",
-      "| C9C7VBY   | Frankfurt am Main    | Logstash Airways | Security Delay             | 15.97          | 285            | 2024-03-01T05:20:01|\n",
-      "| 09P9K2Z   | Paris                | Kibana Airlines  | Late Aircraft Delay        | 11.95          | 195            | 2024-02-29T06:02:38|\n",
-      "| 0FXK4HG   | Osaka                | Logstash Airways | Carrier Delay              | 10.16          | 195            | 2024-02-23T03:34:21|\n",
-      "| 5EYOHJR   | Genova               | ES-Air           | NAS Delay                  | 17.08          | 360            | 2024-02-21T15:51:26|\n",
-      "| X5HA5YJ   | Bangor               | Kibana Airlines  | Weather Delay              | 16.68          | 330            | 2024-02-19T13:50:58|\n",
-      "| 4BZUCXP   | Bogota               | ES-Air           | Late Aircraft Delay        | 14.11          | 30             | 2024-02-16T05:59:37|\n",
-      "| O8I6UU8   | Catania              | ES-Air           | Late Aircraft Delay        | 8.83           | 135            | 2024-02-09T03:12:49|\n",
-      "| 56HYVZQ   | Denver               | Logstash Airways | NAS Delay                  | 17.81          | 60             | 2024-02-08T15:52:44|\n",
-      "| X4025SP   | Paris                | Kibana Airlines  | Late Aircraft Delay        | 7.75           | 30             | 2024-02-08T10:57:29|\n",
+      "| FlightNum |   OriginCityName   |       OriginAirport       |      Carrier     | FlightDelayMin | FlightDelayType        | FlightTimeHour | FlightDelay |\n",
+      "|-----------|---------------------|---------------------------|------------------|----------------|------------------------|----------------|-------------|\n",
+      "| B2JWDRX   | Catania             | Catania-Fontanarossa Airport   | Kibana Airlines |             60 | Security Delay         |        8.00 hrs | true        |\n",
+      "| C9C7VBY   | Frankfurt am Main   | Frankfurt am Main Airport | Logstash Airways |            285 | Security Delay         |       15.97 hrs | true        |\n",
+      "| 09P9K2Z   | Paris               | Charles de Gaulle International Airport | Kibana Airlines |            195 | Late Aircraft Delay    |       11.95 hrs | true        |\n",
+      "| 0FXK4HG   | Osaka               | Kansai International Airport | Logstash Airways |            195 | Carrier Delay          |       10.17 hrs | true        |\n",
+      "| 5EYOHJR   | Genova              | Genoa Cristoforo Colombo Airport | ES-Air           |            360 | NAS Delay              |       17.09 hrs | true        |\n",
+      "| X5HA5YJ   | Bangor              | Bangor International Airport | Kibana Airlines |            330 | Weather Delay          |       16.69 hrs | true        |\n",
+      "| 4BZUCXP   | Bogota              | El Dorado International Airport | ES-Air           |             30 | Late Aircraft Delay    |       14.12 hrs | true        |\n",
+      "| O8I6UU8   | Catania             | Catania-Fontanarossa Airport   | ES-Air          |            135 | Late Aircraft Delay    |        8.84 hrs | true        |\n",
+      "| 56HYVZQ   | Denver              | Denver International Airport | Logstash Airways |             60 | NAS Delay              |       17.82 hrs | true        |\n",
+      "| X4025SP   | Paris               | Charles de Gaulle International Airport | Kibana Airlines |             30 | Late Aircraft Delay    |        7.75 hrs | true        |\n",
       "\n",
-      "Please note that all times are in UTC.\n"
+      "This table lists recent delayed flights heading to Bangalore with relevant information about the delay and flight time.\n"
      ]
     }
    ],
