Adding notebook for function calling with Elasticsearch

--- a/notebooks/integrations/openai/function-calling.ipynb
+++ b/notebooks/integrations/openai/function-calling.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "bbf1a2dc-49f8-4bfd-8317-7f28c5ef4715",
    "metadata": {},
    "outputs": [
@@ -454,20 +454,20 @@
      "text": [
       "Here are the last 10 flight delays to Bangalore:\n",
       "\n",
-      "| FlightNum |   OriginCityName   |       OriginAirport       |      Carrier     | FlightDelayMin | FlightDelayType        | FlightTimeHour | FlightDelay |\n",
-      "|-----------|---------------------|---------------------------|------------------|----------------|------------------------|----------------|-------------|\n",
-      "| B2JWDRX   | Catania             | Catania-Fontanarossa Airport   | Kibana Airlines |             60 | Security Delay         |        8.00 hrs | true        |\n",
-      "| C9C7VBY   | Frankfurt am Main   | Frankfurt am Main Airport | Logstash Airways |            285 | Security Delay         |       15.97 hrs | true        |\n",
-      "| 09P9K2Z   | Paris               | Charles de Gaulle International Airport | Kibana Airlines |            195 | Late Aircraft Delay    |       11.95 hrs | true        |\n",
-      "| 0FXK4HG   | Osaka               | Kansai International Airport | Logstash Airways |            195 | Carrier Delay          |       10.17 hrs | true        |\n",
-      "| 5EYOHJR   | Genova              | Genoa Cristoforo Colombo Airport | ES-Air           |            360 | NAS Delay              |       17.09 hrs | true        |\n",
-      "| X5HA5YJ   | Bangor              | Bangor International Airport | Kibana Airlines |            330 | Weather Delay          |       16.69 hrs | true        |\n",
-      "| 4BZUCXP   | Bogota              | El Dorado International Airport | ES-Air           |             30 | Late Aircraft Delay    |       14.12 hrs | true        |\n",
-      "| O8I6UU8   | Catania             | Catania-Fontanarossa Airport   | ES-Air          |            135 | Late Aircraft Delay    |        8.84 hrs | true        |\n",
-      "| 56HYVZQ   | Denver              | Denver International Airport | Logstash Airways |             60 | NAS Delay              |       17.82 hrs | true        |\n",
-      "| X4025SP   | Paris               | Charles de Gaulle International Airport | Kibana Airlines |             30 | Late Aircraft Delay    |        7.75 hrs | true        |\n",
+      "| Flight Number | Origin City | Carrier           | Delay (Minutes) | Delay Type             | Date & Time          |\n",
+      "|---------------|-------------|-------------------|------------------|------------------------|----------------------|\n",
+      "| B2JWDRX       | Catania     | Kibana Airlines   | 60               | Security Delay         | 2024-03-03 13:32:15  |\n",
+      "| C9C7VBY       | Frankfurt   | Logstash Airways  | 285              | Security Delay         | 2024-03-01 05:20:01  |\n",
+      "| 09P9K2Z       | Paris       | Kibana Airlines   | 195              | Late Aircraft Delay    | 2024-02-29 06:02:38  |\n",
+      "| 0FXK4HG       | Osaka       | Logstash Airways  | 195              | Carrier Delay          | 2024-02-23 03:34:21  |\n",
+      "| 5EYOHJR       | Genova      | ES-Air            | 360              | NAS Delay              | 2024-02-21 15:51:26  |\n",
+      "| X5HA5YJ       | Bangor      | Kibana Airlines   | 330              | Weather Delay          | 2024-02-19 13:50:58  |\n",
+      "| 4BZUCXP       | Bogota      | ES-Air            | 30               | Late Aircraft Delay    | 2024-02-16 05:59:37  |\n",
+      "| O8I6UU8       | Catania     | ES-Air            | 135              | Late Aircraft Delay    | 2024-02-09 03:12:49  |\n",
+      "| 56HYVZQ       | Denver      | Logstash Airways  | 60               | NAS Delay              | 2024-02-08 15:52:44  |\n",
+      "| X4025SP       | Paris       | Kibana Airlines   | 30               | Late Aircraft Delay    | 2024-02-08 10:57:29  |\n",
       "\n",
-      "This table lists recent delayed flights heading to Bangalore with relevant information about the delay and flight time.\n"
+      "If you need more details or further assistance, please let me know.\n"
      ]
     }
    ],
