pin sentence-transformers to 2.7.0 as 3.0.0 is broken

--- a/notebooks/images/image-similarity.ipynb
+++ b/notebooks/images/image-similarity.ipynb
@@ -45,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install sentence-transformers eland elasticsearch transformers torch tqdm Pillow streamlit"
+    "!pip install sentence-transformers==2.7.0 eland elasticsearch transformers torch tqdm Pillow streamlit"
    ]
   },
   {
