--- a/notebooks/model-upgrades/_nbtest.setup.upgrading-index-to-use-elser.ipynb
+++ b/notebooks/model-upgrades/_nbtest.setup.upgrading-index-to-use-elser.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -qU elasticsearch sentence-transformers"
+    "!pip install -qU elasticsearch sentence-transformers==2.7.0"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Elastic Cloud ID:  ········\n",
