--- a/notebooks/search/04-multilingual.ipynb
+++ b/notebooks/search/04-multilingual.ipynb
@@ -82,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -qU elasticsearch sentence_transformers"
+    "!pip install -qU elasticsearch sentence-transformers==2.7.0"
    ]
   },
   {
